fix new name area of project editor

--- a/app/editor.html
+++ b/app/editor.html
@@ -26,9 +26,9 @@
 		<button class="button_edit" onclick="executeProject();">Stop</button>
 	</div>
 	<div class="change_mode_area">
-		<button class="button_change_mode" onclick="showInfoMode();">Info View</button>
-		<button class="button_change_mode" onclick="showExeMode();">EXE View</button>
-		<button class="button_change_mode" onclick="showEditMode();">Edit View</button>
+		<button class="button_change_mode" onclick="showInfoView();">Info View</button>
+		<button class="button_change_mode" onclick="showExeView();">EXE View</button>
+		<button class="button_change_mode" onclick="showEditView();">Edit View</button>
 	</div>
 	
 	<!--------------------------- menus / browser --------------------------------->
