--- a/app/editor.html
+++ b/app/editor.html
@@ -60,7 +60,7 @@
 				<button id="button_rename" onclick="showNewNameArea('renameArea');">Rename</button>
 			</div>
 			<div class="shownewfilearea">
-				<button id="button_delete" onclick="showNewNameArea();">Delete</button>
+				<button id="button_delete" onclick="showNewNameArea('deleteArea');">Delete</button>
 			</div>
 		</div>
 	</div>
@@ -89,8 +89,12 @@
 	</div>
 	<div id="renameArea" class="newNameArea">
 		Rename selected<br>
-		<input type="text" id="renamefilename" class="inputNewNameBox" placeholder="rename"/>
+		<input type="text" id="renameitem" class="inputNewNameBox" placeholder="rename"/>
 		<button class="button_new" id="button_rename_done"></button>
+	</div>
+	<div id="deleteArea" class="newNameArea">
+		Delete selected file or directory ? <br>
+		<button class="button_new" id="button_delete_done"></button>
 	</div>
 
 	<!--------------------------- Info view --------------------------------->
