--- a/app/filebrowser.html
+++ b/app/filebrowser.html
@@ -22,8 +22,8 @@
 	
 	<div id="confirm_area">
 	</div>
-	<div id="confirm_dialog">
-		<div id="confirm_message">
+	<div id="confirm_dialog" class="confirm_dialog">
+		<div id="confirm_message" class="confirm_message">
 			<p>The name of file or directory already exists.</p>
 			<p>Do you want to overwrite it?</p>
 			<div id="confirm_button">
@@ -32,8 +32,8 @@
 			</div>
 		</div>
 	</div>
-	<div id="exist_warning_dialog">
-		<div id="confirm_message">
+	<div id="exist_warning_dialog" class="confirm_dialog">
+		<div id="confirm_message" class="confirm_message">
 			<p>The name of file or directory already exists.</p>
 			<div id="confirm_button">
 				<button id="button_ok" type="button">OK</button>
