add image, fix css

--- a/app/filebrowser.html
+++ b/app/filebrowser.html
@@ -14,10 +14,7 @@
 	</head>
 	<body onload="bootstrap()">
 	<div class="header">
-		<div id="logo"></div>
-	</div>
-
-	<div class="title"><div class="text_title">File Browser</div>
+		<div class="title"><span class="text_title">File Browser</span></div>
 	</div>
 	
 	<div id="confirm_area">
