--- a/app/remotehost.html
+++ b/app/remotehost.html
@@ -16,12 +16,10 @@
 	</head>
 	<body onload="boot()">
 	<div class="header">
-		<div id="logo"></div>
-		<div id="version">Ver.1.1</div>
+		<div class="title"><span class="text_title">Register host</span></div>
 	</div>
 
-	<div class="title"><div class="text_title">Register host</div></div>
-	<div class="tab">
+	<div class="remotehost_tab">
 		<div class="pane_top">
 			<div class="grp_floatleft">
 				<div class="text_label">Label</div>
