--- a/app/editor.html
+++ b/app/editor.html
@@ -16,19 +16,20 @@
 </head>
 <body>
 	<div class="header">
-		<div id="logo"></div>
-	</div>
-	<div class="title text_title">Project Editor</div>
+		<div class="title"><span class="text_title">Project Editor</span></div>
 	
-	<div class="execute_button_area">
-		<button class="button_execute" onclick="executeProject();"></button>
-		<button class="button_edit" onclick="stopProject();">
-			<span class="stop_label">Stop</span>
-		</button>
-	</div>
-	<div class="change_mode_area">
-		<button class="button_change_mode" onclick="showInfoView();">Info</button>
-		<button class="button_change_mode" onclick="showExeView();">Log</button>
+		<div class="execute_button_area">
+			<button class="button_execute" onclick="executeProject();"></button>
+			<button class="button_edit" onclick="stopProject();">
+				<span class="stop_label">Stop</span>
+			</button>
+		</div>
+		<div class="change_mode_area_container">
+			<div class="change_mode_area">
+				<button class="button_change_mode" onclick="showInfoView();">Info</button>
+				<button class="button_change_mode" onclick="showExeView();">Log</button>
+			</div>
+		</div>
 	</div>
 	
 	<div id="confirm_area">
@@ -95,7 +96,11 @@
 		</div>
 	</div>
 
-	<div id="separator"></div>
+	<div id="separator">
+		<span class="separator_image_container">
+			<div id="separator_image" class="separator_image"></div>
+		</span>
+	</div>
 
 	<div id="outputArea">
 		<pre id='stdout'></pre>
