--- a/app/remotehost.html
+++ b/app/remotehost.html
@@ -70,7 +70,7 @@
 		</div>
 		<div class="buttons_remotehost">
 			<button type="button" class="button_open" onclick="openFileBrowser()">
-				<span class="text_button_action">File Browser</span>
+				<span class="text_button_action file_browser_label">File Browser</span>
 			</button>
 		</div>
 		<div class="popup_center">
