--- a/app/home.html
+++ b/app/home.html
@@ -18,14 +18,7 @@
 	<div class="header">
 		<div id="logo"></div>
 	</div>
-
-	<div id="new_project">
-		<div class="new_project_content">
-			<div>New Project!</div>
-			<input type="text" id="newprojectname" class="input-newproject" placeholder="project name"/>
-			<button id="button_new" onclick="newProject(newprojectname.value)"></button>
-		</div>
-	</div>
+		
 	<div class="tab">
 		<div class="pane_left" id="button_menus">
 			<button type="button" class="button_menu" onclick="showNewProjectDialog()"><span class="text_button_menu">New Project</span></button><br>
@@ -76,6 +69,15 @@
 					<span class="text_button_action">Cancel</span>
 				</button>
 			</div>
+		</div>
+	</div>
+		
+
+	<div id="new_project">
+		<div class="new_project_content">
+			<div class="newNameLabel">New Project!</div>
+			<input type="text" id="newprojectname" class="input-newproject" placeholder="project name"/>
+			<button class="button_new" id="button_new" onclick="newProject(newprojectname.value)"></button>
 		</div>
 	</div>
 		
