change vim / xcode button change scrollbar color in IE

--- a/app/editor.html
+++ b/app/editor.html
@@ -26,8 +26,8 @@
 			<div class="change_mode_area">
 				<button class="button_change_mode" onclick="showInfoView();">Info</button>
 				<button class="button_change_mode" onclick="showExeView();">Log</button>
-				<button class="button_vim_mode" onclick="modeChange(this.value);" value="vim" id="button_vimmode">
-					<span class="vim_mode_text">Vim Mode</span></button>
+				<button class="button_vim_mode" onclick="modeChange(this.value);" disabled value="vim" id="button_vimmode">
+					<span class="vim_mode_text">Vim</span></button>
 			</div>
 		</div>
 	</div>
