add horizontal white line to filebrowser on project editor

--- a/app/editor.html
+++ b/app/editor.html
@@ -93,6 +93,9 @@
 				</button>
 			</div>
 		</div>
+		<div class="newfilearea_border_container">
+			<div class="newfilearea_border"></div>
+		</div>
 	</div>
 
 	<div id="separator">
