--- a/app/editor.html
+++ b/app/editor.html
@@ -104,9 +104,6 @@
 		</span>
 	</div>
 
-	<div id="outputArea">
-		<pre id='stdout'></pre>
-	</div>
 	<div id="imageArea">
 		<img id="imageView"/>
 	</div>
@@ -228,9 +225,9 @@
 				</span>
 			</div>
 			<div class="exe_log_area">
-				<div class="exe_log" id="exe_log">
+				<pre class="exe_log" id="exe_log">
 					Log Area
-				</div>
+				</pre>
 			</div>
 		</div>
 	</span>
