add save button

--- a/app/editor.html
+++ b/app/editor.html
@@ -247,6 +247,12 @@
 
 		<div>
 			<pre id="editor"></pre>
+			<button class="button_save_editor" id="button_save_editor"
+					onClick="saveFile();"
+					onMouseover="this.style.opacity=1.0;"
+					onMouseout="this.style.opacity=0.6" >
+				<span class="save_label">Save</span>
+			</button>
 		</div>
 
 		<div id="exeViewArea">
