--- a/app/editor.html
+++ b/app/editor.html
@@ -124,11 +124,15 @@
 	<div id="renameArea" class="newNameArea">
 		<span class="newNameLabel">Rename selected</span><br>
 		<input type="text" id="renameitem" class="inputNewNameBox" placeholder="rename"/>
-		<button class="button_new" id="button_rename_done"></button>
+		<button class="button_rename_done" id="button_rename_done">
+			<span class="rename_done_label">Rename</span>
+		</button>
 	</div>
 	<div id="deleteArea" class="newNameArea">
 		<span class="newNameLabel">Delete selected file or directory ? </span><br>
-		<button class="button_new" id="button_delete_done"></button>
+		<button class="button_delete_done" id="button_delete_done">
+			<span class="delete_done_label">Delete</span>
+		</button>
 	</div>
 
 	<!--------------------------- Info view --------------------------------->
