--- a/app/editor.html
+++ b/app/editor.html
@@ -19,8 +19,8 @@
 		<div class="title"><span class="text_title">Project Editor</span></div>
 	
 		<div class="execute_button_area">
-			<button class="button_execute" onclick="executeProject();"></button>
-			<button class="button_stop" onclick="stopProject();"></button>
+			<button class="button_execute" onclick="executeProject();" title='Run (CTRL+R)'></button>
+			<button class="button_stop" onclick="stopProject();" title='Stop (CTRL+Q)'></button>
 		</div>
 		<div class="change_mode_area_container">
 			<div class="change_mode_area">
@@ -254,7 +254,7 @@
 			<button class="button_save_editor" id="button_save_editor"
 					onClick="saveFile();"
 					onMouseover="this.style.opacity=1.0;"
-					onMouseout="this.style.opacity=0.6" >
+					onMouseout="this.style.opacity=0.6" title='Save File (CTRL + S)'>
 				<span class="save_label">Save</span>
 			</button>
 		</div>
