--- a/app/remotehost.html
+++ b/app/remotehost.html
@@ -40,7 +40,7 @@
 						<input id="input_id" class="input_info"  placeholder="username"></input>
 					</div>
 					<div class="grp_floatleft">
-						<div class="text_label">Password</div>
+						<div class="text_label">Passphrase</div>
 						<input id="input_password" class="input_info" type="password"></input>
 					</div>
 					<div class="grp_floatleft">
