change dialog design

--- a/app/editor.html
+++ b/app/editor.html
@@ -40,7 +40,8 @@
 		<div id="confirm_message" class="confirm_message">
 			<p>The name of file or directory already exists.</p>
 			<div id="confirm_button">
-				<button id="button_ok" type="button">OK</button>
+				<button class="confirm_button" id="button_ok" type="button">
+					<span class="confirm_button_text">OK</span></button>
 			</div>
 		</div>
 	</div>
