fix popup message background color

--- a/app/editor.html
+++ b/app/editor.html
@@ -46,7 +46,7 @@
 		</div>
 	</div>
 	<div id="stop_message_dialog" class="confirm_dialog">
-		<div id="stop_message" class="confirm_message">
+		<div id="stop_message" class="stop_message">
 			<p>Execution: Stopped.</p>
 		</div>
 	</div>
