--- a/app/editor.html
+++ b/app/editor.html
@@ -142,82 +142,83 @@
 	<span id="info_mode" style="display:block">
 		<div id="info_area" class="info_area">
 			<div class="project_title">
+				<span class="info_project_title">
 				Project Name:
+				</span>
 				<span id="info_project_title_text" class="project_title_text">
 					Project Title
 				</span>
+				<div class="info_bar"></div>
 			</div>
 			<div class="info_back_button_area" id="info_back_button_area">
-				<button class="button_back" onclick="backToInfo();">Back</button>
+				<button class="button_back" onclick="backToInfo();"></button>
 			</div>
 			<div class="info_text_area" id="info_opened_text_area">
 			</div>
-			<div class="info_table_area">
-				<table class="info_text_area" id="info_text_area">
-					<tr>
-						<td class="info_title">
-							Description
-						</td>
-						<td class="info_text" id="info_description">
-							<!--project description-->
-						</td>
-					</tr>
+			<div class="info_text_area" id="info_text_area">
+				<div class="row">
+					<div class="info_title">
+						Description
+					</div>
+					<div class="info_text" id="info_description">
+						<!--project description-->
+					</div>
+				</div>
 
-					<tr>
-						<td class="info_title">
-							Workflow File
-						</td>
-						<td class="info_text" id="info_workflow">
-							<!--<a class="info_link" href="#">workflow files</a>-->
-						</td>
-					</tr>
+				<div class="row">
+					<div class="info_title">
+						Workflow File
+					</div>
+					<div class="info_text" id="info_workflow">
+						<!--<a class="info_link" href="#">workflow files</a>-->
+					</div>
+				</div>
 
 
-					<tr>
-						<td class="info_title">
-							Case File
-						</td>
-						<td class="info_text" id="info_case">
-							<!--<a class="info_link" href="#">case files</a>-->
-						</td>
-					</tr>
+				<div class="row">
+					<div class="info_title">
+						Case File
+					</div>
+					<div class="info_text" id="info_case">
+						<!--<a class="info_link" href="#">case files</a>-->
+					</div>
+				</div>
 
-					<tr>
-						<td class="info_title">
-							KDB URL
-						</td>
-						<td class="info_text" id="info_kdb_url">
-							<!--<a class="info_link" href="#">KDB URL</a>-->
-						</td>
-					</tr>
+				<div class="row">
+					<div class="info_title">
+						KDB URL
+					</div>
+					<div class="info_text" id="info_kdb_url">
+						<!--<a class="info_link" href="#">KDB URL</a>-->
+					</div>
+				</div>
 
-					<tr>
-						<td class="info_title">
-							KDB Modified
-						</td>
-						<td class="info_text" id="info_kdb_change">
-							<!--KDB changes-->
-						</td>
-					</tr>
+				<div class="row">
+					<div class="info_title">
+						KDB Modified
+					</div>
+					<div class="info_text" id="info_kdb_change">
+						<!--KDB changes-->
+					</div>
+				</div>
 
-					<tr>
-						<td class="info_title">
-							KDB Detail
-						</td>
-						<td class="info_text" id="info_kdb_detail_of_change">
-							<!--KDB detail of change-->
-						</td>
-					</tr>
+				<div class="row">
+					<div class="info_title">
+						KDB Detail
+					</div>
+					<div class="info_text" id="info_kdb_detail_of_change">
+						<!--KDB detail of change-->
+					</div>
+				</div>
 
-					<tr>
-						<td class="info_title">
-							Log File
-						</td>
-						<td class="info_text" id="info_log">
-							<!--<a class="info_link" href="#">log files</a>-->
-						</td>
-					</tr>
-				</table>
+				<div class="row">
+					<div class="info_title">
+						Log File
+					</div>
+					<div class="info_text" id="info_log">
+						<!--<a class="info_link" href="#">log files</a>-->
+					</div>
+				</div>
 			</div>
 		</div>
 	</span>
