--- a/app/editor.html
+++ b/app/editor.html
@@ -15,6 +15,7 @@
 	<link href="css/backfire.css" rel="stylesheet"/>
 </head>
 <body>
+	<span class="fontchange">
 	<div class="header">
 		<div class="title"><span class="text_title">Project Editor</span></div>
 	
@@ -240,6 +241,10 @@
 		</div>
 	</span>
 	
+		
+	<!---- End of fontchange -->
+	</span>
+		
 	<!--------------------------- Editer --------------------------------->
 	<span id="edit_mode" style="display:none">
 		<div>
