show filename on info view

--- a/app/editor.html
+++ b/app/editor.html
@@ -143,10 +143,10 @@
 	<span id="info_mode" style="display:block">
 		<div id="info_area" class="info_area">
 			<div class="project_title">
-				<span class="info_project_title">
+				<span class="info_project_title" id="info_project_title">
 				Project Name:
 				</span>
-				<span id="info_project_title_text" class="project_title_text">
+				<span id="info_title_text" class="project_title_text">
 					Project Title
 				</span>
 			</div>
@@ -221,7 +221,7 @@
 		</div>
 	</span>
 	<div class="info_back_button_area" id="info_back_button_area">
-		<button class="button_back" onclick="backToInfo();"></button>
+		<button class="button_back" id="button_back" onclick="backToInfo();"></button>
 	</div>
 	
 	<!--------------------------- Log --------------------------------->
