--- a/app/filebrowser.html
+++ b/app/filebrowser.html
@@ -68,7 +68,7 @@
 				</div>
 				
 				<span id="rename_box_container" style="display:none;">
-					<input type"text" id="rename_box">
+					<input type="text" id="rename_box" class="rename_box">
 				</span>
 				
 				<div class="actionmenu" id="actionmenu_left">
