--- a/app/editor.html
+++ b/app/editor.html
@@ -21,7 +21,7 @@
 	
 		<div class="execute_button_area">
 			<button class="button_execute" id="button_execute_" title='Run (CTRL+R)'></button>
-			<button class="button_stop" id="button_stop_" title='Stop (CTRL+Q)'></button>
+			<!--button class="button_stop" id="button_stop_" title='Stop (CTRL+Q)'></button-->
 		</div>
 		<div class="change_mode_area_container">
 			<div class="change_mode_area">
