fix new project dialog

--- a/app/home.html
+++ b/app/home.html
@@ -31,6 +31,16 @@
 			</div>
 		</div>
 	</div>
+	<div id="newproject_name_dialog" class="confirm_dialog">
+		<div class="confirm_project_message">
+			<p>New Project created as</p>
+			<span id="new_projectname"></span>
+			<div id="confirm_button">
+				<button class="confirm_project_button" id="newproject_name_button_ok" type="button">
+					<span class="confirm_button_text">OK</span></button>
+			</div>
+		</div>
+	</div>
 		
 	<div class="tab">
 		<div class="pane_left" id="button_menus">
