change log area

--- a/app/editor.html
+++ b/app/editor.html
@@ -227,15 +227,17 @@
 	<!--------------------------- Log --------------------------------->
 	<span id="exe_mode" style="display:none">
 		<div id="exe_area" class="exe_area">
-			<div class="project_title_log">
-				Project Name:
-				<span id="exe_project_title_text" class="project_title_text">
-					Project Title
-				</span>
+			<div class="project_title">
+				<div class="info_project_title_log">
+					Log:
+					<span id="exe_project_title_text" class="project_title_text">
+						Project Title
+					</span>
+				</div>
 			</div>
+			<div class="info_bar"></div>
 			<div class="exe_log_area">
-				<pre class="exe_log" id="exe_log">
-					Log Area
+				<pre class="exe_log" id="exe_log"> Log Area
 				</pre>
 			</div>
 		</div>
