fix open archive

--- a/app/home.html
+++ b/app/home.html
@@ -103,6 +103,14 @@
 		</div>
 	</div>
 		
+	<div id="extract_archive">
+		<div class="extract_archive_content" id="extract_archive_content">
+			<div class="newArchiveLabel">Input Extract Name</div>
+			<input type="text" id="extractname" class="input-extractarchive" placeholder="extract name"/>
+			<button class="button_new" id="button_new" onclick="extractArchive(extractname.value)"></button>
+		</div>
+	</div>
+		
 	<div class="popup_background" id="popup_background"></div>
 </body>
 </html>
